[tool.poetry]
name = "aygp-python-tools"
version = "0.1.0"
description = "Collection of Python tool examples and utilities"
authors = ["Computer Use <computeruse@defrecord.com>"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
ruff = "^0.1.5"
mypy = "^1.5.1"
pytest = "^7.4.0"
hypothesis = "^6.82.6"
pandas = "^2.0.3"
numpy = "^1.24.3"
transformers = "^4.31.0"
fastapi = "^0.100.0"
httpx = "^0.24.1"
langchain = "^0.0.330"
tiktoken = "^0.4.0"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
